--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Cjc455.GitHub.io</h1>
+      <h1 class="project-name">Welcome to Chris's Incredible Github Page!!!!!</h1>
       <h2 class="project-tagline">my github.io thing</h2>
     </section>
 
@@ -48,6 +48,6 @@
 
     </section>
 
-  
+
   </body>
 </html>
