--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Welcome to Chris's Incredible Github Page!!!!!</h1>
-      <h2 class="project-tagline">my github.io thing</h2>
+      <h2 class="project-tagline">Yaay!</h2>
     </section>
 
     <section class="main-content">
